2005-08-20  Will Duquette <will@wjduquette.com>

	* snit.tcl: It's now an error to call an object's "destroy" method
	in the object's constructor.
	* snit2.tcl: Snit 2.0, implemented with "namespace ensemble".
	* snit.test: Now uses the "-body" style of Tcltests throughout.
	Also, tests Snit 1.x (snit.tcl) when run with Tcl/Tk 8.4, and
	tests Snit 2.x when run with Tcl/Tk 8.5.

2005-08-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* snit.tcl (::snit::Comp.statement.hulltype): make hulltype one of
	$::snit::hulltypes, allow ttk::frame

2005-06-07  Will Duquette  <will@wjduquette.com>

	* snit.test (bug-2.1, bug-2.2): Added the "tk" constraint, so that
	they'll be excluded when snit.test is run with tclsh.

2005-06-04  Will Duquette  <will@wjduquette.com>

	* snit.tcl, snit.man, snitfaq.man: Updated the copyright
	information to 2005.
	* snit.html, faq.html: Removed these files, as they are obsolete.
	snit.man and snitfaq.man contain the up-to-date documentation.

2005-06-04  Will Duquette  <will@wjduquette.com>

	* snit.tcl: Bumped the version number to 1.0
	* pkgIndex.tcl: Bumped the version number to 1.0.
	* dictionary.txt: Bumped the version number to 1.0.
	* snit.man: Bumped the version number to 1.0.
	* snitfaq.man: Bumped the version number to 1.0.
	
2005-06-04  Will Duquette  <will@wjduquette.com>

	* snit.tcl (::snit::RT.DestroyObject)
	* snit.test (test bug-2.1, bug-2.2): 
	  Fixed [SF Tcllib Bug 1106375].

2005-06-04  Will Duquette  <will@wjduquette.com>

	* snit.tcl (::snit::Comp.statement.destructor):
	* snit.test (test bug-1.1)
	  Fixed [SF Tcllib Bug 1161779].

2005-06-04  Will Duquette  <will@wjduquette.com>

	* snit.tcl: Checked a number of small optimizations Jeff Hobbs
	sent me. Bumped the version number to 0.98.
	* pkgIndex.tcl: Bumped the version number to 0.98.
	* dictionary.txt: Bumped the version number to 0.98.
	* snit.man: Bumped the version number to 0.98.
	* snitfaq.man: Bumped the version number to 0.98.
