@@ -30,7 +30,7 @@ namespace eval ::snit:: {
     variable reservedArgs {type selfns win self}
 
     # Widget classes which can be hulls (must have -class)
-    variable hulltypes {frame toplevel ttk::frame}
+    variable hulltypes {frame toplevel ttk::frame labelframe ttk::labelframe}
 }
 
 #-----------------------------------------------------------------------
@@ -905,7 +905,7 @@ proc ::snit::Comp.statement.hulltype {name} {
     }
 
     # Next, it must be one of the valid hulltypes (frame, toplevel, ...)
-    if {[lsearch -exact $hulltypes $name] == -1} {
+    if {[lsearch -exact $hulltypes [string trimleft $name :]] == -1} {
         error "invalid hulltype \"$name\", should be one of\
 		[join $hulltypes {, }]"
     }
