@@ -1,3 +1,8 @@
+2005-08-22  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* snit.tcl, snit2.tcl: allow labelframe and ttk::labelframe as
+	hulltypes, and tk::(label)frame (planning ahead ...)
+
 2005-08-20  Will Duquette <will@wjduquette.com>
 
 	* snit.tcl: It's now an error to call an object's "destroy" method
